# libsynchro

./: .gitignore  Cargo.toml  LICENSE
capi/: Cargo.toml  build.rs
capi/src/: lib.rs
examples/client/: main.rs
examples/server/: main.rs
src/: lib.rs  wrappedtcpstream.rs
