[package]
name = "libsynchro"
version = "0.1.0"
authors = ["jurplel <jurplel@interversehq.com>"]
edition = "2018"
license = "MIT"

[dependencies]
tokio = { git = "https://github.com/dvic/tokio/", branch = "async-await-preview-feature-fix", features = ["async-await-preview"] }
tokio-futures = { git = "https://github.com/dvic/tokio/", branch = "async-await-preview-feature-fix", features = ["async-await-preview"] }
bytes = "0.4"
futures = "0.1"