[package]
name = "libsynchro"
version = "0.1.0"
authors = ["jurplel <jurplel@interversehq.com>"]
edition = "2018"
license = "MIT"

[dependencies]
serde = "1.0"
reqwest = "0.9"
bytes = "0.5"
futures = "0.3"

[dependencies.tokio]
version = "0.2"
features = ["tcp", "sync", "io-util", "rt-core", "stream", "macros"]

[dependencies.tokio-util]
version = "0.2"
features = ["codec"]