[package]
name = "libsynchro"
version = "0.1.0"
authors = ["jurplel <jurplel@interversehq.com>"]
edition = "2018"
license = "MIT"

[dependencies]
async-std = {version = "1.5", features = ["attributes"]}
surf = "2.0.0-alpha.4"
serde = { version = "1.0", features = ["derive"] }
bytes = "0.5"
futures-channel = "0.3"